# ffmpeg

./: .gitignore  README.md  configure
AgoraAI/: 120_out_0_1280x720.yuv  README.md  build-android.sh  build-ios-metallib.sh  build-mac-metallib.sh  build-release-ios.sh  build-release-mac.sh  build-windows-release-x64.bat  build-windows-release-x86.bat  gen-ios.sh  gen-linux.sh  gen-mac.sh  gen-vs2017.bat
AgoraAI/include/: NEON_2_SSE.h
AgoraAI/proj.cmake/: CMakeLists.txt  ios.toolchain.cmake  mac.toolchain.cmake
AgoraAI/proj.cmake/libAgoraAI/: CMakeLists.txt
AgoraAI/proj.cmake/libJnd/: CMakeLists.txt
AgoraAI/proj.cmake/test/: CMakeLists.txt
AgoraAI/resource/: 120_org_0.yuv
AgoraAI/src/libAgoraAI/core/: common.h  concat.h  conv.h  deconv.h  eltwise.h  layer.cpp  layer.h  net.cpp  net.h  pad.h  relu.h  resize.h  tensor.cpp  tensor.h  utils.h
AgoraAI/src/libAgoraAI/impl_ref/: concat.cpp  concat.h  conv.cpp  conv.h  deconv.cpp  deconv.h  eltwise.cpp  eltwise.h  pad.cpp  pad.h  relu.cpp  relu.h  resize.cpp  resize.h
AgoraAI/src/libJnd/: Jnd4_Padding_ConvsAndBias_paras.h  cl_engine.cpp  cl_engine.h  cl_kernel_cfg.cpp  cl_kernel_cfg.h  half_float.cpp  half_float.h  jnd_filter.cpp  jnd_filter_cl.cpp  jnd_filter_cl.h  jnd_filter_wrapper.cpp  jnd_filter_wrapper.h  jnd_funcs.h  jnd_funcs_O.h  jnd_kernel_cl.cpp
AgoraAI/src/libJnd/ios/: half_float.h  half_float.mm  jnd_filter_metal.h  jnd_filter_metal.mm  jnd_filter_oc.h  jnd_filter_oc.mm  jnd_kernels.metal  metal_define.h  metal_engine.h  metal_engine.mm  metal_kernel_cfg.h  metal_kernel_cfg.mm
AgoraAI/src/test/: KernelMacro.h  Test.cl  Test.cpp  TestOpenCL.cpp  jnd.cpp  jnd_filter_sample.cpp  jnd_model.h
fftools/: ffmpeg.c  ffplay.c
libavcodec/: Makefile  h264_cabac.c  h264_cache_info.c  h264_cache_info.h  h264_cavlc.c  h264_slice.c  h264dec.c  h264dec.h  libx264.c
libavfilter/: Makefile  allfilters.c  avfiltergraph.c  jnd_filter_wrapper.h  vf_hwupload_cuda.c  vf_jnd.c  vf_unsharp_npp.c
libavformat/: flvdec.c  flvenc.c
libavutil/: frame.c  frame.h  hwcontext_cuda.c
