cmake_minimum_required(VERSION 3.4.1)
project(agora_ai)

ADD_DEFINITIONS(-DANDROID)

if (WIN32)
    MESSAGE("Build Windows")
elseif (ANDROID)
    MESSAGE("Build Android")
    if (ARMEABI_V7A)
        set(ABI armeabi-v7a)
        MESSAGE("Target armv7a")
    endif()
    if (ARM64_V8A)
        set(ABI arm64-v8a)
        MESSAGE("Target arm64")
    endif()
    if (X86)
        set(ABI x86)
        MESSAGE("Target x86")
    endif()
elseif (IOS)
    MESSAGE("Build iOS")
elseif (APPLE)
    MESSAGE("Build Mac")
elseif (UNIX)
    MESSAGE("Build Linux")
endif()

if (IOS)
    add_subdirectory(libJnd)
elseif (APPLE)
    add_subdirectory(libJnd)
else()
    add_subdirectory(libAgoraAI)
    add_subdirectory(libJnd)
    add_subdirectory(test)
endif()

